<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_media"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_media"
                android:layout_margin="5dp"
                android:background="@color/color3"/>

            <Button
                android:id="@+id/btn_voice"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_voice"
                android:layout_margin="5dp"
                android:background="@color/color2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_map"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_map"
                android:layout_margin="5dp"
                android:background="@color/color1"/>

            <Button
                android:id="@+id/btn_web"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_web"
                android:layout_margin="5dp"
                android:background="@color/color4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_sms"
                android:layout_margin="5dp"
                android:background="@color/color5"/>

            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/str_call"
                android:layout_margin="5dp"
                android:background="@color/color6"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>