<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceActivity"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageRecord"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <LinearLayout
        android:layout_margin="30dp"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_kayit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_kayit"
            android:textColor="@color/beyaz"
            android:background="@color/color1"/>

        <Button
            android:id="@+id/btn_durdur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_durdur"
            android:textColor="@color/beyaz"
            android:background="@color/color2"/>

        <Button
            android:id="@+id/btn_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_cal"
            android:textColor="@color/beyaz"
            android:background="@color/color3"/>
    </LinearLayout>

</LinearLayout>